# nand2tetris

./: .gitignore  LICENSE  README.md
nand2tetris/: nand2tetris.md
nand2tetris/etc/: LICENSE  README.md  nand2tetris.md
nand2tetris/projects/11/JackAnalyzer/: AnalyzerUtils.cpp  CMakeLists.txt  CompilationEngine.cpp  CompilationEngine.h  JackAnalyzer.cpp  JackAnalyzer.h  JackTokenizer.cpp  JackTokenizer.h  Makefile  README.md  SymbolTable.cpp  SymbolTable.h  SymbolTableVisualizer.h  VMWriter.cpp  VMWriter.h
nand2tetris/projects/6/assembler_cpp/: .clang-format  2  CMakeLists.txt  Parser.cpp  Parser.h  SymbolTable.cpp  SymbolTable.h  main.cpp  main.out  output.txt
nand2tetris/projects/6/assembler_cpp/test_files/: Max.asm
nand2tetris/projects/7/VMTranslator/: ArithmeticCommands.h  ArithmeticLogicalCommands.h  Booting.h  BranchingCommands.h  CMakeLists.txt  CodeWriter.cpp  CodeWriter.h  FunctionReturnCommand.h  HelpersVM.cpp  HelpersVM.h  LogicalAndOrNot.h  LogicalCommandsEQ.h  LogicalCommandsLT.h  ProgramControlCommands.h  PushConstant.h  PushPopCommands.h  PushPopPointer.h  PushPopSegment.h  PushPopTemp.h  VMTranslator.cpp  code_writer.cpp  code_writer.h  main.cpp  parser.cpp  parser.h  utilities.cpp  utilities.h  writeCallCommand.h  writeFunctionCommand.h  writeReturnCommand.h
nand2tetris/projects/7/VMTranslator/quick_code_tests/: main.cpp
nand2tetris/projects/7/VMTranslator/tests/: main.cpp
playground/: Assembly.asm  AssemblyPlayGround.asm  Fill.asm  Test.asm  a.out  main.cpp
week 1/: And.hdl  And16.hdl  DMux.hdl  DMux4Way.hdl  Mux16.hdl  Or16.hdl  Xor.hdl
week 10/JackAnalyzer/: JackAnalyzer.h
week 11/JackAnalyzer/: SymbolTableVisualizer.h  VMWriter.cpp  VMWriter.h
week 12/: Array.jack  Keyboard.jack  Math.jack  Memory.jack  Output.jack  Screen.jack  String.jack  Sys.jack
week 2/: ALU.hdl  Add16.hdl  FullAdder.hdl
week 3/: Register.hdl
week 4/: Mult.asm
week 5/: Computer.hdl  Memory.hdl  Mux8Way.hdl
week 6/assembler_cpp/: SymbolTable.cpp  main.cpp
week 7/VMTranslator/: CMakeLists.txt
week 8/VMTranslator/: CodeWriter.cpp  LogicalAndOrNot.h  LogicalCommandsEQ.h  Makefile
(+269 files in other folders)
